Solved x overflow issue and improved margins on diagonal sectoin
X overflow was happening at small devices. Issue was margin added to a few rows and gutter on rows. Removed this. Other thing that was improved is the visual padidng on the diagonal section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11317,3 +11317,11 @@ margin-left: 12rem;}
     .custom-margin-4-right {
   margin-right: 20rem;}
     }
+
+/*
+* {
+  outline: 1px solid #f00 !important;
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+*/
